[package]
name = "sp-network-privacy"
version = "1.0.0"
authors = ["Centrality Developers <support@centrality.ai>"]
edition = "2018"

[dependencies]
sp-api = { version = "2.0.0-alpha.5", default-features = false, path="../api"}
sp-std = { version = "2.0.0-alpha.5", default-features = false, path="../std"}

[features]
default = ["std"]
std = [
	"sp-std/std",
	"sp-api/std",
]
